src/main/java/com/example/barteringandtrading/Error/CustomErrorResponse.java
package com.example.barteringandtrading.Error;

public class CustomErrorResponse {
}
